Add basic markup for sidebar and header

--- a/index.html
+++ b/index.html
@@ -8,5 +8,52 @@
 </head>
 <body>
   
+  <div class="container">
+
+    <div class="sidebar">
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>Profile</li>
+          <li>Messages</li>
+          <li>History</li>
+          <li>Tasks</li>
+          <li>Communities</li>
+        </ul>
+      </nav>
+      <nav>
+        <ul>
+          <li>Settings</li>
+          <li>Support</li>
+          <li>Privacy</li>
+        </ul>
+      </nav>
+    </div>
+
+    <div class="header">
+      <div class="header__search">
+        <input type="search" id="search-bar">
+      </div>
+      <img src="#" alt="bell notification icon">
+      <img src="#" alt="profile image icon">
+      <span class="profile-name">
+        Profile Name
+      </span>
+    </div>
+    <div class="header__profile">
+      <img src="#" alt="profile image icon">
+      <div class="header__profile--text">
+        <p class="greeting">Hi there,</p>
+        <p class="profile-name">Profile Name (@profilename)</p>
+      </div>
+      <ul class="header__profile--links">
+        <div class="header__profile--item"><a href="#" class="header__profile--link">New</a></div>
+        <div class="header__profile--item"><a href="#" class="header__profile--link">Upload</a></div>
+        <div class="header__profile--item"><a href="#" class="header__profile--link">Share</a></div>
+      </ul>
+    </div>
+
+  </div>
+
 </body>
 </html>
