Add markup for project section of main content

--- a/index.html
+++ b/index.html
@@ -53,6 +53,64 @@
       </ul>
     </div>
 
+    <div class="main-projects">
+      <h2 class="main-projects__title">Your Projects</h2>
+      <div class="main-projects__card">
+        <h3>Super Cool Project</h3>
+        <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+        <div class="main-projects__icons">
+          <img src="#" alt="icon1">
+          <img src="#" alt="icon2">
+          <img src="#" alt="icon3">
+        </div>
+      </div>
+      <div class="main-projects__card">
+        <h3></h3>
+        <p></p>
+        <div class="main-projects__icons">
+          <img src="#" alt="icon1">
+          <img src="#" alt="icon2">
+          <img src="#" alt="icon3">
+        </div>
+      </div>
+      <div class="main-projects__card">
+        <h3></h3>
+        <p></p>
+        <div class="main-projects__icons">
+          <img src="#" alt="icon1">
+          <img src="#" alt="icon2">
+          <img src="#" alt="icon3">
+        </div>
+      </div>
+      <div class="main-projects__card">
+        <h3></h3>
+        <p></p>
+        <div class="main-projects__icons">
+          <img src="#" alt="icon1">
+          <img src="#" alt="icon2">
+          <img src="#" alt="icon3">
+        </div>
+      </div>
+      <div class="main-projects__card">
+        <h3></h3>
+        <p></p>
+        <div class="main-projects__icons">
+          <img src="#" alt="icon1">
+          <img src="#" alt="icon2">
+          <img src="#" alt="icon3">
+        </div>
+      </div>
+      <div class="main-projects__card">
+        <h3></h3>
+        <p></p>
+        <div class="main-projects__icons">
+          <img src="#" alt="icon1">
+          <img src="#" alt="icon2">
+          <img src="#" alt="icon3">
+        </div>
+      </div>
+    </div>
+
   </div>
 
 </body>
