Add more markup for main content section

--- a/index.html
+++ b/index.html
@@ -53,62 +53,112 @@
       </ul>
     </div>
 
-    <div class="main-projects">
-      <h2 class="main-projects__title">Your Projects</h2>
-      <div class="main-projects__card">
-        <h3>Super Cool Project</h3>
-        <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
-        <div class="main-projects__icons">
-          <img src="#" alt="icon1">
-          <img src="#" alt="icon2">
-          <img src="#" alt="icon3">
+    <div class="main">
+      <div class="main-projects">
+        <h2 class="main-projects__title">Your Projects</h2>
+        <div class="main-projects__cards">
+          <div class="main-projects__card">
+            <h3>Super Cool Project</h3>
+            <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+            <div class="main-projects__icons">
+              <img src="#" alt="icon1">
+              <img src="#" alt="icon2">
+              <img src="#" alt="icon3">
+            </div>
+          </div>
+          <div class="main-projects__card">
+            <h3>Less Cool Project</h3>
+            <p>Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur spien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
+            <div class="main-projects__icons">
+              <img src="#" alt="icon1">
+              <img src="#" alt="icon2">
+              <img src="#" alt="icon3">
+            </div>
+          </div>
+          <div class="main-projects__card">
+            <h3>Impossible App</h3>
+            <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
+            <div class="main-projects__icons">
+              <img src="#" alt="icon1">
+              <img src="#" alt="icon2">
+              <img src="#" alt="icon3">
+            </div>
+          </div>
+          <div class="main-projects__card">
+            <h3>Easy Peasy App</h3>
+            <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
+            <div class="main-projects__icons">
+              <img src="#" alt="icon1">
+              <img src="#" alt="icon2">
+              <img src="#" alt="icon3">
+            </div>
+          </div>
+          <div class="main-projects__card">
+            <h3>Ad Blocker</h3>
+            <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</p>
+            <div class="main-projects__icons">
+              <img src="#" alt="icon1">
+              <img src="#" alt="icon2">
+              <img src="#" alt="icon3">
+            </div>
+          </div>
+          <div class="main-projects__card">
+            <h3>Money Maker</h3>
+            <p>Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</p>
+            <div class="main-projects__icons">
+              <img src="#" alt="icon1">
+              <img src="#" alt="icon2">
+              <img src="#" alt="icon3">
+            </div>
+          </div>
         </div>
       </div>
-      <div class="main-projects__card">
-        <h3></h3>
-        <p></p>
-        <div class="main-projects__icons">
-          <img src="#" alt="icon1">
-          <img src="#" alt="icon2">
-          <img src="#" alt="icon3">
+
+      <div class="main-announcements">
+        <h2 class="main-announcements__title">Announcements</h2>
+        <div class="main-announcements__announcements">
+          <div class="main-announcements__item1">
+            <h3></h3>
+            <p></p>
+          </div>
+          <div class="main-announcements__item2">
+            <h3></h3>
+            <p></p>
+          </div>
+          <div class="main-announcements__item3">
+            <h3></h3>
+            <p></p>
+          </div>
         </div>
       </div>
-      <div class="main-projects__card">
-        <h3></h3>
-        <p></p>
-        <div class="main-projects__icons">
-          <img src="#" alt="icon1">
-          <img src="#" alt="icon2">
-          <img src="#" alt="icon3">
+
+      <div class="main-trending">
+        <h2 class="main-trending__title">Trending</h2>
+        <div class="main-trending__profiles">
+          <div class="main-trending__profile1">
+            <img src="#" alt="icon1">
+            <p>@tegan</p>
+            <p>Word Peace Builder</p>
+          </div>
+          <div class="main-trending__profile2">
+            <img src="#" alt="icon2">
+            <p>@morgan</p>
+            <p>Super Cool Project</p>
+          </div>
+          <div class="main-trending__profile3">
+            <img src="#" alt="icon3">
+            <p>@kendall</p>
+            <p>Life Changing App</p>
+          </div>
+          <div class="main-trending__profile4">
+            <img src="#" alt="icon4">
+            <p>@alex</p>
+            <p>No Traffic Maker</p>
+          </div>
         </div>
       </div>
-      <div class="main-projects__card">
-        <h3></h3>
-        <p></p>
-        <div class="main-projects__icons">
-          <img src="#" alt="icon1">
-          <img src="#" alt="icon2">
-          <img src="#" alt="icon3">
-        </div>
-      </div>
-      <div class="main-projects__card">
-        <h3></h3>
-        <p></p>
-        <div class="main-projects__icons">
-          <img src="#" alt="icon1">
-          <img src="#" alt="icon2">
-          <img src="#" alt="icon3">
-        </div>
-      </div>
-      <div class="main-projects__card">
-        <h3></h3>
-        <p></p>
-        <div class="main-projects__icons">
-          <img src="#" alt="icon1">
-          <img src="#" alt="icon2">
-          <img src="#" alt="icon3">
-        </div>
-      </div>
+
+
     </div>
 
   </div>
