Fill in text content for announcement section

--- a/index.html
+++ b/index.html
@@ -118,16 +118,16 @@
         <h2 class="main-announcements__title">Announcements</h2>
         <div class="main-announcements__announcements">
           <div class="main-announcements__item1">
-            <h3></h3>
-            <p></p>
+            <h3>Site Maintenance</h3>
+            <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales congue...</p>
           </div>
           <div class="main-announcements__item2">
-            <h3></h3>
-            <p></p>
+            <h3>Community Share Day</h3>
+            <p>Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan porttitor...</p>
           </div>
           <div class="main-announcements__item3">
-            <h3></h3>
-            <p></p>
+            <h3>Updated Privacy Policy</h3>
+            <p>Phasellus efficitur nisi eget elit consecteur, eget condimentum ante auctor. Cras fringilla sagittis sem in mattis...</p>
           </div>
         </div>
       </div>
