Add dashboard title

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div class="container">
 
     <div class="sidebar">
+      <h1 class="sidebar__title">Dashboard</h1>
       <nav>
         <ul>
           <li>Home</li>
