--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
 
     <div class="sidebar">
-      <h1 class="sidebar__title">Dashboard</h1>
+      <h1 class="sidebar__title"><span class="sidebar__logo"><img src="#" alt="dashboard logo"></span>Dashboard</h1>
       <nav>
         <ul>
           <li>Home</li>
