Revise icon class names to group together

--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
   <div class="container">
 
     <div class="sidebar">
-      <h1 class="sidebar__title"><span class="sidebar__logo"><img src="#" alt="dashboard logo"></span>Dashboard</h1>
+      <h1 class="sidebar__title"><span class="sidebar__logo"><img class="logo-icons" src="./image/view-dashboard.svg" alt="dashboard logo"></span>Dashboard</h1>
       <nav>
         <ul>
-          <li>Home</li>
-          <li>Profile</li>
-          <li>Messages</li>
-          <li>History</li>
-          <li>Tasks</li>
-          <li>Communities</li>
+          <li><span class="sidebar__logo"><img class="logo-icons" src="./image/home-variant.svg" alt="home icon"></span>Home</li>
+          <li><span class="sidebar__logo"><img class="logo-icons" src="./image/card-account-details-outline.svg" alt="profile icon"></span>Profile</li>
+          <li><span class="sidebar__logo"><img class="logo-icons" src="./image/message.svg" alt="message icon"></span>Messages</li>
+          <li><span class="sidebar__logo"><img class="logo-icons" src="./image/history.svg" alt="history icon"></span>History</li>
+          <li><span class="sidebar__logo"><img class="logo-icons" src="./image/calendar-check-outline.svg" alt="task icon"></span>Tasks</li>
+          <li><span class="sidebar__logo"><img class="logo-icons" src="./image/account-group.svg" alt="community icon"></span>Communities</li>
         </ul>
       </nav>
       <nav>
         <ul>
-          <li>Settings</li>
-          <li>Support</li>
-          <li>Privacy</li>
+          <li><span class="sidebar__logo"><img class="logo-icons" src="./image/cog.svg" alt="setting icon"></span>Settings</li>
+          <li><span class="sidebar__logo"><img class="logo-icons" src="./image/account-question.svg" alt="question mark icon"></span>Support</li>
+          <li><span class="sidebar__logo"><img class="logo-icons" src="./image/shield-account-variant.svg" alt="shield icon"></span>Privacy</li>
         </ul>
       </nav>
     </div>
