Add an extra container outside of header search

--- a/index.html
+++ b/index.html
@@ -32,14 +32,16 @@
     </div>
 
     <div class="header">
-      <div class="header__search">
-        <input type="search" id="search-bar">
+      <div class="header__container">
+        <div class="header__search">
+          <input type="search" id="search-bar">
+        </div>
+        <img src="#" alt="bell notification icon">
+        <img src="#" alt="profile image icon">
+        <span class="profile-name">
+          Profile Name
+        </span>
       </div>
-      <img src="#" alt="bell notification icon">
-      <img src="#" alt="profile image icon">
-      <span class="profile-name">
-        Profile Name
-      </span>
     </div>
     <div class="header__profile">
       <img src="#" alt="profile image icon">
