Change profile name to clam chowder

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <img src="#" alt="bell notification icon">
         <img src="#" alt="profile image icon">
         <span class="profile-name">
-          Profile Name
+          Clam Chowder
         </span>
       </div>
     </div>
@@ -47,7 +47,7 @@
       <img src="#" alt="profile image icon">
       <div class="header__profile--text">
         <p class="greeting">Hi there,</p>
-        <p class="profile-name">Profile Name (@profilename)</p>
+        <p class="profile-name">Clam Chowder (@clamchowder)</p>
       </div>
       <ul class="header__profile--links">
         <div class="header__profile--item"><a href="#" class="header__profile--link">New</a></div>
