--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
     <div class="header">
       <div class="header__container">
         <div class="header__search">
+          <span></span>
           <input type="search" id="search-bar">
         </div>
-        <img src="#" alt="bell notification icon">
+        <img src="./image/bell.svg" alt="bell notification icon">
         <img src="#" alt="profile image icon">
         <span class="profile-name">
           Clam Chowder
