Change container to include profile pic and profile name

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
           <span></span>
           <input type="search" id="search-bar">
         </div>
-        <img src="./image/bell.svg" alt="bell notification icon">
-        <img src="#" alt="profile image icon">
+        <img class="header__container--bell" src="./image/bell.svg" alt="bell notification icon">
         <span class="profile-name">
-          Clam Chowder
+          <img class="header__container--profile" src="./image/169504324_ad4d5ef6-aa16-40cd-85a4-34aae516323c.svg" alt="profile image icon">
+          <p>Clam Chowder</p>
         </span>
       </div>
     </div>
