Remove class from sidebar logo

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       </nav>
       <nav>
         <ul>
-          <li><span class="sidebar__logo--buttons"><img class="logo-icons" src="./image/cog.svg" alt="setting icon"></span>Settings</li>
-          <li><span class="sidebar__logo--buttons"><img class="logo-icons" src="./image/account-question.svg" alt="question mark icon"></span>Support</li>
-          <li><span class="sidebar__logo--buttons"><img class="logo-icons" src="./image/shield-account-variant.svg" alt="shield icon"></span>Privacy</li>
+          <li><span class="sidebar__logo"><img class="logo-icons" src="./image/cog.svg" alt="setting icon"></span>Settings</li>
+          <li><span class="sidebar__logo"><img class="logo-icons" src="./image/account-question.svg" alt="question mark icon"></span>Support</li>
+          <li><span class="sidebar__logo"><img class="logo-icons" src="./image/shield-account-variant.svg" alt="shield icon"></span>Privacy</li>
         </ul>
       </nav>
     </div>
