Add container for profile pic and intro

--- a/index.html
+++ b/index.html
@@ -45,10 +45,14 @@
       </div>
     </div>
     <div class="header__profile">
-      <img src="#" alt="profile image icon">
-      <div class="header__profile--text">
-        <p class="greeting">Hi there,</p>
-        <p class="profile-name">Clam Chowder (@clamchowder)</p>
+      <div class="header__profile--title">
+        <span class="header__profile--img">
+          <img src="./image/169504324_ad4d5ef6-aa16-40cd-85a4-34aae516323c.svg" alt="profile image icon">
+        </span>
+        <div class="header__profile--text">
+          <p class="greeting">Hi there,</p>
+          <p class="profile-name">Clam Chowder (@clamchowder)</p>
+        </div>
       </div>
       <ul class="header__profile--links">
         <div class="header__profile--item"><a href="#" class="header__profile--link">New</a></div>
