Add space between greeting and profile name in header

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <img src="./image/169504324_ad4d5ef6-aa16-40cd-85a4-34aae516323c.svg" alt="profile image icon">
         </span>
         <div class="header__profile--text">
-          <p class="greeting">Hi there, <span>Clam Chowder (@clamchowder)</span></p>
+          <p class="greeting">Hi there,<br> <span>Clam Chowder (@clamchowder)</span></p>
         </div>
       </div>
       <ul class="header__profile--links">
