--- a/index.html
+++ b/index.html
@@ -68,54 +68,54 @@
             <h3>Super Cool Project</h3>
             <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
             <div class="main-projects__icons">
-              <img src="#" alt="icon1">
-              <img src="#" alt="icon2">
-              <img src="#" alt="icon3">
+              <img src="./image/heart-plus-outline.svg" alt="icon1">
+              <img src="./image/eye-plus-outline.svg" alt="icon2">
+              <img src="./image/share-variant-outline.svg" alt="icon3">
             </div>
           </div>
           <div class="main-projects__card">
             <h3>Less Cool Project</h3>
             <p>Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur spien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
             <div class="main-projects__icons">
-              <img src="#" alt="icon1">
-              <img src="#" alt="icon2">
-              <img src="#" alt="icon3">
+              <img src="./image/heart-plus-outline.svg" alt="icon1">
+              <img src="./image/eye-plus-outline.svg" alt="icon2">
+              <img src="./image/share-variant-outline.svg" alt="icon3">
             </div>
           </div>
           <div class="main-projects__card">
             <h3>Impossible App</h3>
             <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
             <div class="main-projects__icons">
-              <img src="#" alt="icon1">
-              <img src="#" alt="icon2">
-              <img src="#" alt="icon3">
+              <img src="./image/heart-plus-outline.svg" alt="icon1">
+              <img src="./image/eye-plus-outline.svg" alt="icon2">
+              <img src="./image/share-variant-outline.svg" alt="icon3">
             </div>
           </div>
           <div class="main-projects__card">
             <h3>Easy Peasy App</h3>
             <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
             <div class="main-projects__icons">
-              <img src="#" alt="icon1">
-              <img src="#" alt="icon2">
-              <img src="#" alt="icon3">
+              <img src="./image/heart-plus-outline.svg" alt="icon1">
+              <img src="./image/eye-plus-outline.svg" alt="icon2">
+              <img src="./image/share-variant-outline.svg" alt="icon3">
             </div>
           </div>
           <div class="main-projects__card">
             <h3>Ad Blocker</h3>
             <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</p>
             <div class="main-projects__icons">
-              <img src="#" alt="icon1">
-              <img src="#" alt="icon2">
-              <img src="#" alt="icon3">
+              <img src="./image/heart-plus-outline.svg" alt="icon1">
+              <img src="./image/eye-plus-outline.svg" alt="icon2">
+              <img src="./image/share-variant-outline.svg" alt="icon3">
             </div>
           </div>
           <div class="main-projects__card">
             <h3>Money Maker</h3>
             <p>Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</p>
             <div class="main-projects__icons">
-              <img src="#" alt="icon1">
-              <img src="#" alt="icon2">
-              <img src="#" alt="icon3">
+              <img src="./image/heart-plus-outline.svg" alt="icon1">
+              <img src="./image/eye-plus-outline.svg" alt="icon2">
+              <img src="./image/share-variant-outline.svg" alt="icon3">
             </div>
           </div>
         </div>
@@ -143,22 +143,22 @@
         <h2 class="main-trending__title">Trending</h2>
         <div class="main-trending__profiles">
           <div class="main-trending__profile1">
-            <img src="#" alt="icon1">
+            <img src="#" alt="profile icon1">
             <p>@tegan</p>
             <p>Word Peace Builder</p>
           </div>
           <div class="main-trending__profile2">
-            <img src="#" alt="icon2">
+            <img src="#" alt="profile icon2">
             <p>@morgan</p>
             <p>Super Cool Project</p>
           </div>
           <div class="main-trending__profile3">
-            <img src="#" alt="icon3">
+            <img src="#" alt="profile icon3">
             <p>@kendall</p>
             <p>Life Changing App</p>
           </div>
           <div class="main-trending__profile4">
-            <img src="#" alt="icon4">
+            <img src="#" alt="profile icon4">
             <p>@alex</p>
             <p>No Traffic Maker</p>
           </div>
