Add container to text in main project cards

--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
         <h2 class="main-projects__title">Your Projects</h2>
         <div class="main-projects__cards">
           <div class="main-projects__card">
-            <h3>Super Cool Project</h3>
-            <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+            <div class="main-projects__card--text">
+              <h3>Super Cool Project</h3>
+              <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+            </div>
             <div class="main-projects__icons">
               <img src="./image/heart-plus-outline.svg" alt="icon1">
               <img src="./image/eye-plus-outline.svg" alt="icon2">
@@ -74,8 +76,10 @@
             </div>
           </div>
           <div class="main-projects__card">
-            <h3>Less Cool Project</h3>
-            <p>Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur spien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
+            <div class="main-projects__card--text">
+              <h3>Less Cool Project</h3>
+              <p>Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur spien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
+            </div>
             <div class="main-projects__icons">
               <img src="./image/heart-plus-outline.svg" alt="icon1">
               <img src="./image/eye-plus-outline.svg" alt="icon2">
@@ -83,8 +87,10 @@
             </div>
           </div>
           <div class="main-projects__card">
-            <h3>Impossible App</h3>
-            <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
+            <div class="main-projects__card--text">
+              <h3>Impossible App</h3>
+              <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
+            </div>
             <div class="main-projects__icons">
               <img src="./image/heart-plus-outline.svg" alt="icon1">
               <img src="./image/eye-plus-outline.svg" alt="icon2">
@@ -92,8 +98,10 @@
             </div>
           </div>
           <div class="main-projects__card">
-            <h3>Easy Peasy App</h3>
-            <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
+            <div class="main-projects__card--text">
+              <h3>Easy Peasy App</h3>
+              <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
+            </div>
             <div class="main-projects__icons">
               <img src="./image/heart-plus-outline.svg" alt="icon1">
               <img src="./image/eye-plus-outline.svg" alt="icon2">
@@ -101,8 +109,10 @@
             </div>
           </div>
           <div class="main-projects__card">
-            <h3>Ad Blocker</h3>
-            <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</p>
+            <div class="main-projects__card--text">
+              <h3>Ad Blocker</h3>
+              <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</p>
+            </div>
             <div class="main-projects__icons">
               <img src="./image/heart-plus-outline.svg" alt="icon1">
               <img src="./image/eye-plus-outline.svg" alt="icon2">
@@ -110,8 +120,10 @@
             </div>
           </div>
           <div class="main-projects__card">
-            <h3>Money Maker</h3>
-            <p>Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</p>
+            <div class="main-projects__card--text">
+              <h3>Money Maker</h3>
+              <p>Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</p>
+            </div>
             <div class="main-projects__icons">
               <img src="./image/heart-plus-outline.svg" alt="icon1">
               <img src="./image/eye-plus-outline.svg" alt="icon2">
