Change class name for profile names

--- a/index.html
+++ b/index.html
@@ -154,25 +154,21 @@
       <div class="main-trending">
         <h2 class="main-trending__title">Trending</h2>
         <div class="main-trending__profiles">
-          <div class="main-trending__profile1">
-            <img src="#" alt="profile icon1">
-            <p>@tegan</p>
-            <p>Word Peace Builder</p>
+          <div class="main-trending__profile item1">
+            <img src="./image/169504324_ad4d5ef6-aa16-40cd-85a4-34aae516323c.svg" alt="profile icon1">
+            <p>@tegan<br>Word Peace Builder</p>
           </div>
-          <div class="main-trending__profile2">
-            <img src="#" alt="profile icon2">
-            <p>@morgan</p>
-            <p>Super Cool Project</p>
+          <div class="main-trending__profile item2">
+            <img src="./image/169504324_ad4d5ef6-aa16-40cd-85a4-34aae516323c.svg" alt="profile icon2">
+            <p>@morgan<br>Super Cool Project</p>
           </div>
-          <div class="main-trending__profile3">
-            <img src="#" alt="profile icon3">
-            <p>@kendall</p>
-            <p>Life Changing App</p>
+          <div class="main-trending__profile item3">
+            <img src="./image/169504324_ad4d5ef6-aa16-40cd-85a4-34aae516323c.svg" alt="profile icon3">
+            <p>@kendall<br>Life Changing App</p>
           </div>
-          <div class="main-trending__profile4">
-            <img src="#" alt="profile icon4">
-            <p>@alex</p>
-            <p>No Traffic Maker</p>
+          <div class="main-trending__profile item4">
+            <img src="./image/169504324_ad4d5ef6-aa16-40cd-85a4-34aae516323c.svg" alt="profile icon4">
+            <p>@alex<br>No Traffic Maker</p>
           </div>
         </div>
       </div>
