Add container to bell icon in header

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <span></span>
           <input type="search" id="search-bar">
         </div>
-        <img class="header__container--bell" src="./image/bell.svg" alt="bell notification icon">
+        <div class="header__container--image-container"><img class="header__container--bell" src="./image/bell.svg" alt="bell notification icon"></div>
         <span class="profile-name">
           <img class="header__container--profile" src="./image/169504324_ad4d5ef6-aa16-40cd-85a4-34aae516323c.svg" alt="profile image icon">
           <p>Clam Chowder</p>
